add JVM args in test tasks